made the cracker spin

--- a/index.css
+++ b/index.css
@@ -20,7 +20,7 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    resize: horizontal;
+    resize: both;
 }
 
 #upgrades {
